[gd_scene load_steps=5 format=3 uid="uid://b406rr7t1e7l5"]

[ext_resource type="Theme" uid="uid://btaw50vh5uwuc" path="res://prefabs/panel_theme_lower.tres" id="1_61n33"]
[ext_resource type="Theme" uid="uid://b7w6nlw8ufqs3" path="res://prefabs/panel_theme_upper.tres" id="1_rqr7n"]
[ext_resource type="Script" path="res://prefabs/hover_tooltip.gd" id="1_wa6r3"]
[ext_resource type="FontFile" uid="uid://bmlvgy0exl15" path="res://kenney/Font/Kenney Future.ttf" id="2_cfu7q"]

[node name="hover_tooltip" type="Control"]
custom_minimum_size = Vector2(236, 157)
layout_mode = 3
anchors_preset = 0
offset_right = 236.0
offset_bottom = 157.0
script = ExtResource("1_wa6r3")

[node name="LowerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 236.0
offset_bottom = 157.0
theme = ExtResource("1_61n33")

[node name="LowerText" type="RichTextLabel" parent="LowerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.032
anchor_right = 0.021
anchor_bottom = 0.032
offset_left = 0.0439997
offset_top = 57.976
offset_right = 227.044
offset_bottom = 104.976
theme_override_fonts/normal_font = ExtResource("2_cfu7q")
theme_override_fonts/bold_font = ExtResource("2_cfu7q")
bbcode_enabled = true
text = "Description"
fit_content = true

[node name="UpperPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 236.0
offset_bottom = 63.0
theme = ExtResource("1_rqr7n")

[node name="UpperText" type="RichTextLabel" parent="UpperPanel"]
layout_mode = 2
anchor_left = 0.021
anchor_top = 0.079
anchor_right = 0.021
anchor_bottom = 0.079
offset_left = 0.0439997
offset_top = 0.0229998
offset_right = 227.044
offset_bottom = 47.023
theme_override_fonts/normal_font = ExtResource("2_cfu7q")
theme_override_fonts/bold_font = ExtResource("2_cfu7q")
bbcode_enabled = true
text = "[font_size=25]Title[/font_size] [right][font_size=10]x[/font_size]stacks[/right]"
fit_content = true
